--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Login</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" th:href="@{/css/login.css}">
+
 </head>
 <body>
+<div class="login-form">
     <form th:action="@{/accounts/login}" method="post">
-        <label>
-            <input type="text" name="username"/>
-        </label>
-        <label>
-            <input type="password" name="password"/>
-        </label>
-        <input type="submit">
+        <h2 class="text-center">Log in</h2>
+        <div class="form-group">
+            <input name="username" id="username" type="email" class="form-control" placeholder="Username"
+                   required="required">
+        </div>
+        <div class="form-group">
+            <input type="password" name="password" id="password" class="form-control" placeholder="Password"
+                   required="required">
+        </div>
+        <div class="form-group">
+            <button type="submit" class="btn btn-primary btn-block">Log in</button>
+        </div>
+        <div class="clearfix">
+            <label class="pull-left checkbox-inline"><input type="checkbox" name="remember-me"> Remember me</label>
+            <a href="#" class="pull-right">Forgot Password?</a>
+        </div>
+        <div style="display: flex; align-items: center; justify-content: center">
+            <p class="error" th:if="${param.error}" th:text="invalid"></p>
+            <p id="logout" class="FadeIn fifth" th:if="${param.logout}" th:text="logout"></p>
+        </div>
     </form>
+    <p class="text-center"><a href="#">Create an Account</a></p>
+    <ul style="display: flex; align-items: center; justify-content: center" id="lang">
+        <li><a class="underlineHover" href="?lang=en" th:text="EN"></a></li>
+        <li><a class="underlineHover" href="?lang=ua" th:text="UA"></a></li>
+    </ul>
+</div>
 </body>
 </html>
