--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -1,3 +1,16 @@
+html {
+    height: 100%;
+}
+body {
+    display: flex;
+    flex-direction: column;
+    height: 100vh; /* Avoid the IE 10-11 `min-height` bug. */
+}
+
+.content {
+    flex: 1;
+}
+
 .login-form {
     width: 340px;
     margin: 50px auto;
@@ -46,11 +59,8 @@
     color: #56baed;
 }
 .terms{
-    display:block;
-    position:absolute;
-    bottom:0;
-    right:0;
-    width:100%;
+    flex-shrink: 0;
     background:#eee;
     border:1px solid #ddd;
 }
+
