--- a/src/main/resources/templates/home/inspHome.html
+++ b/src/main/resources/templates/home/inspHome.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="stylesheet" th:href="@{/css/login.css}">
     <link rel="stylesheet" th:href="@{/css/userPage.css}">
+    <script th:src="@{/js/search.js}"></script>
     <script
             src="https://code.jquery.com/jquery-3.4.1.js"
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
@@ -21,6 +22,7 @@
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 
 <div class="content">
+    <div th:replace="~{fragments/search :: search}"></div>
     <table class="table-condensed table table-hover" style="border-collapse:collapse;">
         <caption th:text="#{string.reports.list}">Reports List</caption>
         <thead>
