--- a/src/main/resources/templates/home/userHome.html
+++ b/src/main/resources/templates/home/userHome.html
@@ -11,7 +11,7 @@
             integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
             crossorigin="anonymous"></script>
     <script th:src="@{/js/tableToggle.js}"></script>
-
+    <script th:src="@{/js/search.js}"></script>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
           integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,6 +19,7 @@
 <body>
 <div th:replace="~{fragments/navbar :: navbar}"></div>
 <div class="content">
+    <div th:replace="~{fragments/search :: search}"></div>
     <table class="table-condensed table table-hover" style="border-collapse:collapse;">
         <caption th:text="#{string.reports.list}">Reports List</caption>
         <thead>
@@ -68,7 +69,7 @@
             <td colspan="7" class="hiddenRow">
                 <div class="accordian-body collapse" th:id="${report.getId()}">
                     <div th:text="${report.getDescription()}"></div>
-                    <div style="background-color: #ffb2b2; border-top: 0.5px solid grey;" th:if="${report.getReason() != null}" th:text="#{string.reason.toggle} + ${report.getReason()}"></div>
+                    <div style="background-color: #ffdfd4; border-top: 0.5px solid grey;" th:if="${report.getDeclineReason() != null and report.getStatus().name().equals('NOT_ACCEPTED')}" th:text="#{string.reason.toggle} + ${report.getDeclineReason()}"></div>
                 </div>
                 </td>
         </tr>
