--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -7,17 +7,20 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03"
+            aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
     <a class="navbar-brand" th:href="@{/}">Testing</a>
 
     <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-            <li class="nav-item active">
-                <a class="nav-link" th:href="@{/home}" th:text="#{string.home}"></a>
-            </li>
-        </ul>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <span th:if="${url != null}">
+                    <li class="nav-item active">
+                        <a class="nav-link" th:href="${url}" th:text="#{string.home}"></a>
+                    </li>
+                </span>
+            </ul>
         <div class="form-inline my-2 my-lg-0">
             <div sec:authorize="isAuthenticated()">
                 <span class="nav-text"><a href="#" th:text="${session.username}"></a></span>
@@ -30,7 +33,8 @@
                 <span class="nav-text"><a href="/accounts/registration" th:text="#{string.registration}"></a></span>
             </div>
             <div class="nav-item dropdown" style="margin-right: 3.8rem">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" th:text="#{string.lang}">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                   aria-haspopup="true" aria-expanded="false" th:text="#{string.lang}">
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                     <a class="dropdown-item" href="?lang=ua" th:text="#{string.ukr}"></a>
