--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -71,3 +71,24 @@ body {
     justify-content: center
 }
 
+.form-control:focus {
+    box-shadow: none;
+}
+
+.is-invalid{
+    border-color :red;
+}
+
+.is-invalid:focus{
+    border-color :red;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(255, 0, 0, 0.44); !important;
+}
+.is-valid{
+    border-color : #1eff61;
+}
+.is-valid:focus{
+    border-color :#1eff61;
+    box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(40, 167, 69, 0.25); !important;
+}
+
+
